# quantum_computing_in_python_book

./: .gitignore  CLAUDE.md  MANIFEST.in  Quantum_Gates_Lecture.ipynb  Quantum_Operators_and_Control.ipynb  README.md  Untitled.ipynb  _config.yml  _toc.yml  bloch_example.py  bloch_refactored.py  chap0.ipynb  chap0.md  chap1-1.ipynb  chap1-2.ipynb  chap1-3.ipynb  chap1.ipynb  chap1.md  chapter1.ipynb  debug_coordinates.py  history.md  intro.md  myst.yml  preface.md  pyproject.toml  quantum_protocols_lecture.ipynb  requirements.txt  setup.py  test_final_improvements.py  test_immediate_control.py  test_math_notation.py  test_openqasm_translator.ipynb  test_print_tex.py
.github/workflows/: static.yml
_static/: custom.css
qsip/: __init__.py
qsip/algorithms/: __init__.py
qsip/gates/: __init__.py
qsip/translators/: CLASSICAL_CONTROL.md  README.md  __init__.py  openqasm_to_quantikz.py  utils.py
qsip/utils/: __init__.py
qsip/visualization/: __init__.py  bloch.py
